fix: the details nav z-index

--- a/src/features/Moovies/Components/MoovieDetailNav/MoovieDetailNav.css
+++ b/src/features/Moovies/Components/MoovieDetailNav/MoovieDetailNav.css
@@ -4,6 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 200;
 }
 
 .moovie-details-header nav {
